JCR Program/serverParser.py
# Generated from server.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class serverParser ( Parser ):

    grammarFileName = "server.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Address'", "'address'", "'Port'", "'port'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "DirectiveValue", "COMMENT", "BlockComment", 
                      "WS", "ERROR" ]

    RULE_serverconf = 0
    RULE_addressrule = 1
    RULE_portrule = 2

    ruleNames =  [ "serverconf", "addressrule", "portrule" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    DirectiveValue=5
    COMMENT=6
    BlockComment=7
    WS=8
    ERROR=9

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ServerconfContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def addressrule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(serverParser.AddressruleContext)
            else:
                return self.getTypedRuleContext(serverParser.AddressruleContext,i)


        def portrule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(serverParser.PortruleContext)
            else:
                return self.getTypedRuleContext(serverParser.PortruleContext,i)


        def getRuleIndex(self):
            return serverParser.RULE_serverconf

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterServerconf" ):
                listener.enterServerconf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitServerconf" ):
                listener.exitServerconf(self)




    def serverconf(self):

        localctx = serverParser.ServerconfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_serverconf)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 10
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << serverParser.T__0) | (1 << serverParser.T__1) | (1 << serverParser.T__2) | (1 << serverParser.T__3))) != 0):
                self.state = 8
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [serverParser.T__0, serverParser.T__1]:
                    self.state = 6
                    self.addressrule()
                    pass
                elif token in [serverParser.T__2, serverParser.T__3]:
                    self.state = 7
                    self.portrule()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 12
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:

            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)

        finally:
            self.exitRule()
        return localctx


    class AddressruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DirectiveValue(self, i:int=None):
            if i is None:
                return self.getTokens(serverParser.DirectiveValue)
            else:
                return self.getToken(serverParser.DirectiveValue, i)

        def getRuleIndex(self):
            return serverParser.RULE_addressrule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddressrule" ):
                listener.enterAddressrule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddressrule" ):
                listener.exitAddressrule(self)




    def addressrule(self):

        localctx = serverParser.AddressruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_addressrule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 13
            _la = self._input.LA(1)
            if not(_la==serverParser.T__0 or _la==serverParser.T__1):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 15 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 14
                self.match(serverParser.DirectiveValue)
                self.state = 17 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==serverParser.DirectiveValue):
                    break

        except RecognitionException as re:

            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)

        finally:
            self.exitRule()
        return localctx


    class PortruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DirectiveValue(self, i:int=None):
            if i is None:
                return self.getTokens(serverParser.DirectiveValue)
            else:
                return self.getToken(serverParser.DirectiveValue, i)

        def getRuleIndex(self):
            return serverParser.RULE_portrule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPortrule" ):
                listener.enterPortrule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPortrule" ):
                listener.exitPortrule(self)




    def portrule(self):

        localctx = serverParser.PortruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_portrule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            _la = self._input.LA(1)
            if not(_la==serverParser.T__2 or _la==serverParser.T__3):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 21 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 20
                self.match(serverParser.DirectiveValue)
                self.state = 23 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==serverParser.DirectiveValue):
                    break

        except RecognitionException as re:

            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





